--- a/datacollection/user_app/backend/info_files/recordings/gardenfreshsweetcornsalsa.yaml
+++ b/datacollection/user_app/backend/info_files/recordings/gardenfreshsweetcornsalsa.yaml
@@ -946,7 +946,7 @@
   - description: add-add lime juice to the bowl
     tag: Missing Step
   - tag: Order Error
-- recording_id: 41
+  recording_id: 41
   steps:
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
