Changes from recording machine

--- a/datacollection/user_app/backend/info_files/activities.yaml
+++ b/datacollection/user_app/backend/info_files/activities.yaml
@@ -1588,7 +1588,7 @@
     - I1: "1/8 cup soy sauce"
     - I2: "1 tbsp honey"
     - I3: "2 garlic cloves"
-    - I4: "1/2 tbsp minced fresh ginger"
+    - I4: "1/2 tbsp minced ginger"
     - I5: "1/8 tsp black pepper"
     - I6: "1 tsp cornstarch"
     - I7: "2 tablespoons olive oil"
