--- a/datacollection/user_app/backend/info_files/recordings/gardenfreshsweetcornsalsa.yaml
+++ b/datacollection/user_app/backend/info_files/recordings/gardenfreshsweetcornsalsa.yaml
@@ -1,7 +1,7 @@
 - recording_id: 1
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Slice-Slice 1 garlic clove
   - description: Add-Add the corn to the bowl
@@ -23,7 +23,7 @@
 - recording_id: 2
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Slice-Slice 1 garlic clove
   - description: Add-Add the corn to the bowl
@@ -46,7 +46,7 @@
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Slice-Slice 1 garlic clove
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Peel-Peel one onion
   - description: add-add diced cilantro to a bowl
   - description: add sliced garlic to the bowl
@@ -67,7 +67,7 @@
 - recording_id: 4
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Rinse-Rinse a tomato
   - description: Take-Take 1/2 tomato
   - description: Cut-Cut 3/4 cup of corn from the cob
@@ -94,7 +94,7 @@
   - description: Rinse-Rinse a tomato
   - description: Add-Add the corn to the bowl
   - description: Take-Take 1/2 tomato
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: chop-chop tomato into small pieces
   - description: Slice-Slice 1 garlic clove
   - description: Peel-Peel one onion
@@ -111,7 +111,7 @@
 - recording_id: 6
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Rinse-Rinse a tomato
   - description: Extract-Extract lime juice from 1/2 lime
   - description: Slice-Slice 1 garlic clove
@@ -135,7 +135,7 @@
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Add-Add the corn to the bowl
   - description: Peel-Peel one onion
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Rinse-Rinse a tomato
   - description: Slice-Slice 1 garlic clove
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
@@ -155,7 +155,7 @@
 - recording_id: 8
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Slice-Slice 1 garlic clove
   - description: Add-Add the corn to the bowl
@@ -177,7 +177,7 @@
 - recording_id: 9
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Rinse-Rinse a tomato
@@ -199,7 +199,7 @@
 - recording_id: 10
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Rinse-Rinse a tomato
   - description: Take-Take 1/2 tomato
   - description: Cut-Cut 3/4 cup of corn from the cob
@@ -221,7 +221,7 @@
 - recording_id: 11
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Rinse-Rinse a tomato
@@ -244,7 +244,7 @@
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Slice-Slice 1 garlic clove
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Peel-Peel one onion
   - description: add-add diced cilantro to a bowl
   - description: Extract-Extract lime juice from 1/2 lime
@@ -267,7 +267,7 @@
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Add-Add the corn to the bowl
   - description: Peel-Peel one onion
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Slice-Slice 1 jalapeno
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Extract-Extract lime juice from 1/2 lime
@@ -298,7 +298,7 @@
   - description: Slice-Slice 1 garlic clove
   - description: add-add sliced garlic to the bowl
   - description: add-add lime juice to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Take-Take 1/2 tomato
   - description: Slice-Slice 1 jalapeno
   - description: chop-chop tomato into small pieces
@@ -317,7 +317,7 @@
   - description: add-add sliced onion to the bowl
   - description: Rinse-Rinse a tomato
   - description: Slice-Slice 1 jalapeno
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Slice-Slice 1 garlic clove
   - description: Take-Take 1/2 tomato
   - description: add-add diced cilantro to a bowl
@@ -331,7 +331,7 @@
 - recording_id: 16
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Slice-Slice 1 garlic clove
@@ -354,7 +354,7 @@
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Slice-Slice 1 garlic clove
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Peel-Peel one onion
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Slice-Slice 1 jalapeno
@@ -377,7 +377,7 @@
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Add-Add the corn to the bowl
   - description: Peel-Peel one onion
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Rinse-Rinse a tomato
   - description: Extract-Extract lime juice from 1/2 lime
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
@@ -399,7 +399,7 @@
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Peel-Peel one onion
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Extract-Extract lime juice from 1/2 lime
   - description: Slice-Slice 1 jalapeno
   - description: Slice-Slice 1 garlic clove
@@ -432,7 +432,7 @@
   - description: add-add sliced jalapeno to the bowl
   - description: Slice-Slice 1/2 onion into pieces
   - description: add-add sliced onion to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: chop-chop tomato into small pieces
   - description: add-add diced cilantro to a bowl
   - description: add-add chopped tomato to the bowl
@@ -441,7 +441,7 @@
 - recording_id: 21
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Slice-Slice 1 garlic clove
@@ -472,7 +472,7 @@
   - description: Rinse-Rinse a tomato
   - description: add-add lime juice to the bowl
   - description: Take-Take 1/2 tomato
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: chop-chop tomato into small pieces
   - description: add-add chopped tomato to the bowl
   - description: add-add diced cilantro to a bowl
@@ -488,7 +488,7 @@
   - description: Add-Add the corn to the bowl
   - description: Slice-Slice 1 jalapeno
   - description: Slice-Slice 1 garlic clove
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Extract-Extract lime juice from 1/2 lime
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Peel-Peel one onion
@@ -507,7 +507,7 @@
 - recording_id: 24
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Rinse-Rinse a tomato
   - description: Extract-Extract lime juice from 1/2 lime
   - description: Slice-Slice 1 garlic clove
@@ -534,7 +534,7 @@
   - description: Extract-Extract lime juice from 1/2 lime
   - description: add-add sliced jalapeno to the bowl
   - description: Peel-Peel one onion
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: cut-cut onion into two pieces
   - description: add-add lime juice to the bowl
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
@@ -567,7 +567,7 @@
   - description: add-add lime juice to the bowl
   - description: Take-Take 1/2 tomato
   - description: Slice-Slice 1 jalapeno
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: chop-chop tomato into small pieces
   - description: add-add chopped tomato to the bowl
   - description: add-add diced cilantro to a bowl
@@ -575,7 +575,7 @@
   - description: add-add sliced garlic to the bowl
   - description: Mix-Mix all the ingredients in the bowl and serve
 - errors:
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
     tag: Missing Step
   - description: add-add chopped tomato to the bowl
     tag: Missing Step
@@ -607,7 +607,7 @@
     tag: Missing Step
   recording_id: 28
   steps:
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Slice-Slice 1 garlic clove
   - description: Slice-Slice 1 jalapeno
@@ -635,7 +635,7 @@
   recording_id: 29
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Slice-Slice 1 garlic clove
@@ -671,7 +671,7 @@
   - description: Extract-Extract lime juice from 1/2 lime
   - description: add-add lime juice to the bowl
   - description: Add-Add the corn to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: add-add diced cilantro to a bowl
   - description: chop-chop tomato into small pieces
   - description: add-add chopped tomato to the bowl
@@ -687,7 +687,7 @@
     tag: Missing Step
   recording_id: 31
   steps:
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Rinse-Rinse a tomato
@@ -705,7 +705,7 @@
   - description: add-add chopped tomato to the bowl
   - description: Mix-Mix all the ingredients in the bowl and serve
 - errors:
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
     tag: Missing Step
   - description: add-add diced cilantro to a bowl
     tag: Missing Step
@@ -742,7 +742,7 @@
   recording_id: 33
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Rinse-Rinse a tomato
@@ -772,7 +772,7 @@
   - description: Add-Add the corn to the bowl
   - description: Slice-Slice 1 jalapeno
   - description: Slice-Slice 1 garlic clove
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: add-add sliced jalapeno to the bowl
   - description: Extract-Extract lime juice from 1/2 lime
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
@@ -785,7 +785,7 @@
   - description: add-add chopped tomato to the bowl
   - description: Mix-Mix all the ingredients in the bowl and serve
 - errors:
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
     tag: Missing Step
   - description: Extract-Extract lime juice from 1/2 lime
     tag: Missing Step
@@ -820,7 +820,7 @@
   recording_id: 36
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Rinse-Rinse a tomato
   - description: Take-Take 1/2 tomato
   - description: Slice-Slice 1 jalapeno
@@ -847,7 +847,7 @@
   steps:
   - description: Peel-Peel one onion
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Slice-Slice 1 garlic clove
   - description: add-add diced cilantro to a bowl
   - description: Rinse-Rinse a tomato
@@ -874,7 +874,7 @@
   recording_id: 38
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Rinse-Rinse a tomato
   - description: Extract-Extract lime juice from 1/2 lime
   - description: Slice-Slice 1 garlic clove
@@ -899,7 +899,7 @@
   recording_id: 39
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Slice-Slice 1 jalapeno
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Extract-Extract lime juice from 1/2 lime
@@ -923,7 +923,7 @@
   recording_id: 40
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Rinse-Rinse a tomato
@@ -951,7 +951,7 @@
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Peel-Peel one onion
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: cut-cut onion into two pieces
   - description: Slice-Slice 1/2 onion into pieces
   - description: add-add diced cilantro to a bowl
@@ -983,7 +983,7 @@
   - description: Peel-Peel one onion
   - description: Extract-Extract lime juice from 1/2 lime
   - description: add-add lime juice to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Take-Take 1/2 tomato
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: cut-cut onion into two pieces
@@ -1001,7 +1001,7 @@
   recording_id: 43
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Peel-Peel one onion
   - description: Slice-Slice 1 garlic clove
@@ -1039,7 +1039,7 @@
   - description: cut-cut onion into two pieces
   - description: add-add sliced jalapeno to the bowl
   - description: Mix-Mix all the ingredients in the bowl and serve
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: chop-chop tomato into small pieces
   - description: add-add lime juice to the bowl
   - description: Slice-Slice 1/2 onion into pieces
@@ -1055,7 +1055,7 @@
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Add-Add the corn to the bowl
   - description: Peel-Peel one onion
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Slice-Slice 1 jalapeno
   - description: add-add sliced jalapeno to the bowl
   - description: Extract-Extract lime juice from 1/2 lime
@@ -1081,7 +1081,7 @@
   steps:
   - description: add-Measure 1/4 teaspoon salt and add it to the bowl
   - description: Slice-Slice 1 garlic clove
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Slice-Slice 1 jalapeno
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: cut-cut onion into two pieces
@@ -1109,7 +1109,7 @@
   steps:
   - description: Peel-Peel one onion
   - description: Slice-Slice 1 garlic clove
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: Cut-Cut 3/4 cup of corn from the cob
   - description: Add-Add the corn to the bowl
   - description: Rinse-Rinse a tomato
@@ -1146,7 +1146,7 @@
   - description: chop-chop tomato into small pieces
   - description: cut-cut onion into two pieces
   - description: Take-Take 1/2 tomato
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: add-add diced cilantro to a bowl
   - description: add-add chopped tomato to the bowl
   - description: Slice-Slice 1/2 onion into pieces
@@ -1168,7 +1168,7 @@
   - description: cut-cut onion into two pieces
   - description: Slice-Slice 1 jalapeno
   - description: Slice-Slice 1/2 onion into pieces
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: add-add diced cilantro to a bowl
   - description: add-add sliced garlic to the bowl
   - description: Mix-Mix all the ingredients in the bowl and serve
@@ -1200,6 +1200,6 @@
   - description: add-add sliced onion to the bowl
   - description: chop-chop tomato into small pieces
   - description: add-add lime juice to the bowl
-  - description: Dice-Dice 1/4 cup Cilantro
+  - description: Chop-Chop 1/4 cup Cilantro
   - description: add-add diced cilantro to a bowl
 
