--- a/datacollection/user_app/backend/info_files/environments.yaml
+++ b/datacollection/user_app/backend/info_files/environments.yaml
@@ -1,4 +1,5 @@
 - id: 1
+  name: rohith
   users:
     - id: 1
       username: rohith
@@ -25,6 +26,7 @@
       username: vasundhara
       environment_name: rohith
 - id: 2
+  name: akshay
   users:
     - id: 1
       username: rohith
@@ -51,6 +53,7 @@
       username: vasundhara
       environment_name: akshay
 - id: 5
+  name: shivvrat
   users:
     - id: 1
       username: rohith
@@ -77,6 +80,7 @@
       username: vasundhara
       environment_name: shivvrat
 - id: 6
+  name: bharath
   users:
     - id: 1
       username: rohith
@@ -97,6 +101,7 @@
       username: vasundhara
       environment_name: bharath
 - id: 7
+  name: vasundhara
   users:
     - id: 1
       username: rohith
@@ -114,17 +119,20 @@
       username: vasundhara
       environment_name: vasundhara
 - id: 9
+  name: qifan
   users:
     - id: 7
       username: qifan
       environment_name: qifan
 - id: 10
+  name: jikai
   users:
     - id: 6
       username: jikai
       environment_name: jikai
 - id: 11
+  name: ahmed
   users:
     - id: 5
       username: akshay
-      environment_name: mohammed
+      environment_name: ahmed
