--- a/datacollection/user_app/backend/info_files/recordings/microwaveeggsandwich.yaml
+++ b/datacollection/user_app/backend/info_files/recordings/microwaveeggsandwich.yaml
@@ -4,7 +4,8 @@
   - description: Pour-Pour 1 egg into the ramekin cup
   - description: Microwave-Microwave the ramekin cup uncovered on high for 30 seconds
   - description: stir-stir the ramekin cup
-  - description: Microwave -Continue to Microwave for 15-30 more seconds or until the egg is almost set
+  - description: Microwave -Continue to Microwave for 15-30 more seconds or until
+      the egg is almost set
   - description: Cut -Cut the English muffin into two pieces with a knife
   - description: Top -Top cup with 1 tablespoon of salsa
   - description: sprinkle -sprinkle 1 tablespoon of cheese on cup
