updated error categories of blender banana pancakes

--- a/datacollection/user_app/backend/info_files/db_versions/v_1/Blender Banana Pancakes.yaml
+++ b/datacollection/user_app/backend/info_files/db_versions/v_1/Blender Banana Pancakes.yaml
@@ -828,10 +828,8 @@
   - description: Add-Add 1 banana to a blender
   - description: Chop-Chop 1 strawberry
   - description: blitz-blitz the blender for 20 seconds
-  - description: Melt-Melt a small knob of butter in a non-stick frying pan over low-medium
-      heat
-  - description: Pour-Pour three little puddles straight from the blender into the
-      frying pan
+  - description: Melt-Melt a small knob of butter in a non-stick frying pan over low-medium heat
+  - description: Pour-Pour three little puddles straight from the blender into the frying pan
   - description: Cook-Cook for 1 min or until the tops start to bubble
   - description: Flip-Flip the pancakes with a fork or a fish slice spatula
   - description: cook-cook for 20-30 seconds more
