--- a/datacollection/user_app/backend/info_files/db_versions/v_3/Blender Banana Pancakes.yaml
+++ b/datacollection/user_app/backend/info_files/db_versions/v_3/Blender Banana Pancakes.yaml
@@ -445,8 +445,8 @@
   - description: Serve-Serve the pancakes with chopped strawberries
   - description: splash-splash maple syrup on plate
     errors:
-    - description: Spill the maple syrup.
-      tag: Preparation Error
+    - description: Spill the maple syrup while splashing on plate.
+      tag: Technique Error
     modified_description: splash-splash maple syrup on plate and spill some.
 - activity_id: 21
   environment: 6
@@ -479,13 +479,13 @@
   steps:
   - description: Add-1 heaped tbsp flour to a blender
     errors:
-    - description: Splash some flour outside
+    - description: Spill some flour outside while adding to blender
       tag: Technique Error
     modified_description: Add-1 heaped tbsp flour to a blender, but splash some flour
       outside
   - description: Add-1 egg to a blender
     errors:
-    - description: 2 instead of  1 egg
+    - description: Add 2 eggs instead of  1 egg
       tag: Measurement Error
     modified_description: Add-2 eggs to a blender
   - description: Add-1/2 tsp baking powder to a blender
@@ -504,14 +504,14 @@
   - description: Pour-Pour three little puddles straight from the blender into the
       frying pan
     errors:
-    - description: Put the three puddles together
-      tag: Preparation Error
+    - description: Pour the three puddles together from blender into the pan
+      tag: Technique Error
     modified_description: Pour-Pour three little puddles straight from the blender
-      into the frying pan, but put them togher
+      into the frying pan, but put them together
   - description: Cook-Cook for 1 min or until the tops start to bubble
   - description: Chop-Chop 1 strawberry
     errors:
-    - description: mince instead of chop
+    - description: mince instead of chopping 1 strawberry
       tag: Technique Error
     modified_description: Mince-Mince 1 strawberry
   - description: Flip-Flip the pancakes with a fork or a fish slice spatula
@@ -560,47 +560,35 @@
   steps:
   - description: Add-1 egg to a blender
     errors:
-    - description: broken egg
+    - description: Add 1 already broken egg to a blender
       tag: Preparation Error
-    - description: broken egg
-      tag: Technique Error
     modified_description: Add-1 broken egg to a blender
   - description: Add-Add 1 banana to a blender
   - description: Add-1 heaped tbsp flour to a blender
     errors:
-    - description: flatten tbsp
-      tag: Preparation Error
-    - description: flatten tbsp
+    - description: Add 1 flattened tbsp of flour to a blender instead of heaped tbsp
       tag: Measurement Error
-    - description: flatten tbsp
-      tag: Technique Error
-    modified_description: Add-1 flatten tbsp flour to a blender
+    modified_description: Add-1 flattened tbsp flour to a blender
   - description: Add-1/2 tsp baking powder to a blender
   - description: blitz-blitz the blender for 20 seconds
   - description: Melt-Melt a small knob of butter in a non-stick frying pan over low-medium
       heat
     errors:
-    - description: a spoon of butter
-      tag: Preparation Error
-    - description: 'a spoon of butter '
+    - description: Melt a spoon of butter instead of small knob of butter in a non-stick frying pan
       tag: Measurement Error
-    - description: 'a spoon of butter '
-      tag: Technique Error
     modified_description: Melt a spoon of butter in a non-stick frying pan over low-medium
       heat
   - description: Pour-Pour three little puddles straight from the blender into the
       frying pan
     errors:
-    - description: one puddle
-      tag: Technique Error
+    - description: Pour one puddle instead of three little puddles straight from the blender into the frying pan
+      tag: Measurement Error
     modified_description: Pour one puddle straight from the blender into the frying
       pan
   - description: Cook-Cook for 1 min or until the tops start to bubble
     errors:
-    - description: until solid
+    - description: Cook until it's solid
       tag: Timing Error
-    - description: until solid
-      tag: Temperature Error
     modified_description: Cook for until it's solid
   - description: Flip-Flip the pancakes with a fork or a fish slice spatula
   - description: cook-cook for 20-30 seconds more
@@ -610,6 +598,10 @@
   environment: 6
   errors:
   - tag: Order Error
+  - description: Chop-Chop 1 strawberry
+    tag: Missing Step
+  - description: Serve-Serve the pancakes with chopped strawberries
+    tag: Missing Step
   id: '21_43'
   is_error: true
   recorded_by: 1
@@ -651,31 +643,20 @@
   - description: blitz-blitz the blender for 20 seconds
   - description: Melt-Melt a small knob of butter in a non-stick frying pan over low-medium
       heat
-  - description: Chop-Chop 1 strawberry
-    errors:
-    - description: Did not chop strawberry
-      tag: Missing Step
-    modified_description: .
   - description: Pour-Pour three little puddles straight from the blender into the
       frying pan
     errors:
     - description: Pour one large puddle instead of little puddles
-      tag: Preparation Error
+      tag: Measurement Error
   - description: Cook-Cook for 1 min or until the tops start to bubble
   - description: Flip-Flip the pancakes with a fork or a fish slice spatula
     errors:
-    - description: Not using fish slice spatula
-      tag: Preparation Error
-    - description: Trying to flip before its is solid resulting in making a large
+    - description: Not using fish slice spatula resulting in making a large
         ball
-      tag: Technique Error
+      tag: Preparation Error
   - description: cook-cook for 20-30 seconds more
   - description: splash-splash maple syrup on plate
   - description: Transfer-Transfer to a plate
-  - description: Serve-Serve the pancakes with chopped strawberries
-    errors:
-    - description: Miss adding strawberries to the plate
-      tag: Missing Step
 - activity_id: 21
   environment: 5
   errors:
@@ -711,8 +692,8 @@
     modified_description: Add-1/2 Tbsp baking powder to a blender.
   - description: Add-1 heaped tbsp flour to a blender
     errors:
-    - description: Adding without a heap.
-      tag: Technique Error
+    - description: Adding without a heap instead of heaped tbsp.
+      tag: Measurement Error
     modified_description: Add-1 tbsp flour to a blender.
   - description: Chop-Chop 1 strawberry
     errors:
@@ -722,7 +703,7 @@
   - description: splash-splash maple syrup on plate
     errors:
     - description: Spill some maple syrup.
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: splash-splash maple syrup on plate and spill some.
   - description: Add-Add 1 banana to a blender
     errors:
@@ -731,14 +712,12 @@
     modified_description: Add-Add 1/2 banana to a blender.
   - description: blitz-blitz the blender for 20 seconds
     errors:
-    - description: Bliting the blender for more than 20 seconds.
+    - description: Blitzing the blender for more than 20 seconds.
       tag: Timing Error
     modified_description: Blitz-Blitz the blender for 30 seconds.
   - description: Melt-Melt a small knob of butter in a non-stick frying pan over low-medium
       heat
     errors:
-    - description: Instead of low-medium using mediym-low.
-      tag: Temperature Error
     - description: Using a steel pan instead of a non-stick pan.
       tag: Technique Error
     modified_description: Melt-Melt a small knob of butter in a steel frying pan over
@@ -790,11 +769,9 @@
   - description: Add-1 heaped tbsp flour to a blender
   - description: Chop-Chop 1 strawberry
     errors:
-    - description: Slice
+    - description: Slice instead of chop
       tag: Technique Error
-    - description: 2 strawberry
-      tag: Preparation Error
-    - description: 2 strawberry
+    - description: Use 2 strawberry instead of 1
       tag: Measurement Error
     modified_description: Slice 2 strawberry
   - description: blitz-blitz the blender for 20 seconds
@@ -805,26 +782,20 @@
   - description: Melt-Melt a small knob of butter in a non-stick frying pan over low-medium
       heat
     errors:
-    - description: medium knob of butter
-      tag: Preparation Error
-    - description: medium heat
-      tag: Temperature Error
-    - description: medium knob of butter
+    - description: Use medium knob of butter instead of small knob
       tag: Measurement Error
     modified_description: Melt a medium knob of butter in a non-stick frying pan over
       medium heat
   - description: splash-splash maple syrup on plate
     errors:
-    - description: pour
+    - description: pour maple syrup on plate instead of splashing
       tag: Technique Error
-    modified_description: pour maple syrup on plate
+    modified_description: pour maple syrup on plate instead of splashing
   - description: Pour-Pour three little puddles straight from the blender into the
       frying pan
   - description: Cook-Cook for 1 min or until the tops start to bubble
     errors:
-    - description: 2 mins
-      tag: Temperature Error
-    - description: 2 mins
+    - description: Cook for 2 mins instead of 1 min
       tag: Timing Error
     modified_description: Cook for 2 mins
   - description: Flip-Flip the pancakes with a fork or a fish slice spatula
@@ -871,11 +842,10 @@
     modified_description: Add - Miss initially and add it later and blend again
   - description: Add-1/2 tsp baking powder to a blender
     errors:
-    - description: Add-1/2 tsp baking powder to a blender
+    - description: Add-1 tbsp baking powder instead of 1/2 tsp to a blender
       tag: Measurement Error
     modified_description: Add-1 tbsp baking powder to a blender
   - description: Add-Add 1 banana to a blender
-    modified_description: Add-Add 1 banana to a blender
   - description: Chop-Chop 1 strawberry
     errors:
     - description: Cut instead of chopping a strawberry
@@ -883,12 +853,12 @@
     modified_description: Cut-Cut 1 strawberry into pieces
   - description: blitz-blitz the blender for 20 seconds
     errors:
-    - description: 'Blend the contents improperly '
-      tag: Preparation Error
+    - description: Blend the contents improperly for 30 seconds
+      tag: Timing Error
     modified_description: blitz-blitz the blender improperly for 30 seconds
   - description: Add-1 egg to a blender
     errors:
-    - description: 'Crack egg such that it falls into the blender '
+    - description: Crack egg such that it falls into the blender
       tag: Technique Error
     modified_description: Add - Add 1 improperly cracked egg into the blender
   - description: Pour-Pour three little puddles straight from the blender into the
@@ -900,14 +870,17 @@
     modified_description: Cook-Cook on high for 1 min or until the tops start to bubble
   - description: Flip-Flip the pancakes with a fork or a fish slice spatula
   - description: cook-cook for 20-30 seconds more
+    errors:
+      - description: Cook on high for 1 minute
+        tag: Temperature Error
+      - description: Cook on high for 1 minute
+        tag: Timing Error
     modified_description: cook-cook for 1 minute or until its burnt
   - description: Transfer-Transfer to a plate
   - description: Serve-Serve the pancakes with chopped strawberries
     errors:
-    - description: Serve the pancakes with cut strawberries
-      tag: Preparation Error
     - description: Drop while adding maple syrup into the plate
-      tag: Timing Error
+      tag: Technique Error
     modified_description: Serve-Drop while adding maple syrup into the plate before
       serving and have cut strawberries instead of chopped strawberries
 - activity_id: 21
@@ -946,12 +919,12 @@
   - description: Add-1/2 tsp baking powder to a blender
   - description: Add-Add 1 banana to a blender
     errors:
-    - description: half banana
+    - description: Add half banana instead of 1 banana
       tag: Measurement Error
     modified_description: Add 1/2 banana to a blender
   - description: blitz-blitz the blender for 20 seconds
     errors:
-    - description: 25 secs
+    - description: blitz for 25 secs instead of 20 secs
       tag: Timing Error
     modified_description: blitz-blitz the blender for 25 seconds
   - description: Add-1 egg to a blender
@@ -961,7 +934,7 @@
   - description: Melt-Melt a small knob of butter in a non-stick frying pan over low-medium
       heat
     errors:
-    - description: medium heat
+    - description: used medium heat instead of low-medium heat
       tag: Temperature Error
     modified_description: Melt a small knob of butter in a non-stick frying pan over
       medium heat
@@ -972,14 +945,12 @@
     modified_description: Slice 1 strawberry
   - description: cook-cook for 20-30 seconds more
     errors:
-    - description: 20 secs
+    - description: cook for 20 secs
       tag: Timing Error
-    - description: not heating long enough
-      tag: Temperature Error
     modified_description: cook for 20 seconds
   - description: Transfer-Transfer to a plate
     errors:
-    - description: bowl instead plate
+    - description: Use bowl instead plate
       tag: Preparation Error
     modified_description: Transfer to a bowl
   - description: Serve-Serve the pancakes with chopped strawberries
